--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <ul>
             <li>
               <article>
-                <img class="chef-photo" src="/images/Nastya.jpg" alt="Шеф Настя" />
+                <img class="chef-photo" src="images/Nastya.jpg" alt="Nastya chef" />
                 <h3 class="chef-title">Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
@@ -90,7 +90,7 @@
             </li>
             <li>
               <article>
-                <img class="chef-photo" src="/images/Vlad.jpg" alt="Vlad chef" />
+                <img class="chef-photo" src="images/Vlad.jpg" alt="Vlad chef" />
                 <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
