--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Сучасна пекарня</title>
   </head>
   <body>
@@ -136,9 +136,9 @@
             </button>
             <ul class="formats-list">
               <li class="formats-item">
-                <article class="format-card">
+                <article class="format-card walrus-card">
                   <h3 class="format-title" lang="en">Walrus</h3>
-                  <div class="format-text">
+                  <div class="format-text walrus-card">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
                     <p>
@@ -150,7 +150,7 @@
                 </article>
               </li>
               <li class="formats-item">
-                <article class="format-card">
+                <article class="format-card horseshoe-card">
                   <h3 class="format-title" lang="en">Horseshoe</h3>
                   <div class="format-text">
                     <p>Площа: до 25 м2</p>
@@ -164,7 +164,7 @@
                 </article>
               </li>
               <li class="formats-item">
-                <article class="format-card">
+                <article class="format-card handlebar-card">
                   <h3 class="format-title" lang="en">Handlebar</h3>
                   <div class="format-text">
                     <p>Площа: до 15 м2</p>
@@ -194,7 +194,7 @@
                 Приєднуйся до мережі пекарень
               </h2>
               <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-              <form name="contact-call-form" autocomplete="off" novalidate>
+              <form name="contact-call-form" autocomplete="off">
                 <div class="form-field">
                   <label class="form-label visually-hidden" for="user-name">
                     Ім'я
@@ -205,6 +205,7 @@
                     name="user-name"
                     id="user-name"
                     placeholder="Ім'я"
+                    required
                   />
                 </div>
 
@@ -218,6 +219,8 @@
                     name="user-tel"
                     id="user-tel"
                     placeholder="Телефон"
+                    required
+                    pattern="^\+[0-9]{12}"
                   />
                 </div>
 
@@ -231,6 +234,7 @@
                     name="user-mail"
                     id="user-mail"
                     placeholder="Електрона пошта"
+                    required
                   />
                 </div>
 
@@ -324,9 +328,9 @@
     <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
-        <h2 class="section-title">Замовити дзвінок</h2>
+        <h2 class="section-title centered">Замовити дзвінок</h2>
         <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
-        <form name="order-call-form" autocomplete="off" novalidate>
+        <form name="order-call-form" autocomplete="off">
           <div class="form-field">
             <label class="form-label visually-hidden" for="user-name">
               Ім'я
@@ -337,6 +341,7 @@
               name="user-name"
               id="user-name"
               placeholder="Ім'я"
+              required
             />
           </div>
 
@@ -350,6 +355,7 @@
               name="user-tel"
               id="user-tel"
               placeholder="Телефон"
+              required
             />
           </div>
 
@@ -363,6 +369,7 @@
               name="user-mail"
               id="user-mail"
               placeholder="Електрона пошта"
+              required
             />
           </div>
 
