--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
 
     <link rel="stylesheet" href="./css/main.min.css" />
     <title>Сучасна пекарня</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
+        <div class="header__container">
+          <nav class="header__nav">
             <a href="/">
               <img src="images/logo.svg" alt="Логотип сучасної пекарні" />
             </a>
-            <ul class="header-manu">
+            <ul class="header__manu">
               <li>
                 <a class="link" href="#traditions-section">Наші традиції</a>
               </li>
@@ -30,56 +34,84 @@
               <li><a class="link" href="#contact-section">Контакти</a></li>
             </ul>
           </nav>
-          <button class="button modal-btn-open" type="button">
+          <button class="header__button button modal-btn-open" type="button">
             Замовити дзвінок
           </button>
+          <button class="header__berger-button menu-btn-open" type="button">
+            <svg class="header__berger-icon" width="24" height="24">
+              <use href="/images/icons.svg#icon-burger-manu"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu">
+            <button class="mobile-menu__btn-close menu-btn-close" type="button">
+              Close
+            </button>
+          </div>
         </div>
       </div>
     </header>
     <main>
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title"><span>Сучасна</span> пекарня</h1>
+          <h1 class="hero-section__title">
+            <span class="text-brand">Сучасна</span> пекарня
+          </h1>
+          <button
+            class="hero-section__button button modal-btn-open"
+            type="button"
+          >
+            Замовити дзвінок
+          </button>
         </div>
       </section>
-      <section class="advantages-section">
+      <section class="advantages-section section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="advantages-list">
-            <li class="advantages-item">Великий попит на ринку</li>
-            <li class="advantages-item">Доступні за бюджетом формати</li>
-            <li class="advantages-item">Досвідчена управлінська команда</li>
+          <ul class="advantages-section__list">
+            <li class="advantages-section__item">Великий попит на ринку</li>
+            <li class="advantages-section__item">
+              Доступні за бюджетом формати
+            </li>
+            <li class="advantages-section__item">
+              Досвідчена управлінська команда
+            </li>
           </ul>
         </div>
       </section>
       <section class="traditions-section section" id="traditions-section">
         <div class="container">
-          <div class="traditions-container">
-            <div class="traditions-content">
-              <h2 class="traditions-title section-title">
+          <div class="traditions-section__container">
+            <div class="traditions-section__content">
+              <h2 class="traditions-section__title section__title">
                 Новий формат традицій
               </h2>
-              <p class="traditions-text">
-                <span class="brand uppercase">shop bakery</span> — це пекарня,
-                яка взяла все найкраще, і зберегла смак традиційної випічки та
-                натуральність інгредієнтів.
+              <p>
+                <span class="text-brand text-bold uppercase">shop bakery</span>
+                — це пекарня, яка взяла все найкраще, і зберегла смак
+                традиційної випічки та натуральність інгредієнтів.
               </p>
               <p class="traditions-text limited">
                 Ми працюємо як найвідоміші мережі —
-                <span class="brand">5 хвилин і замовлення готове.</span>
+                <span class="text-brand text-bold"
+                  >5 хвилин і замовлення готове.</span
+                >
                 А ще у наших пекарень стильний дизайн та висока якість
                 обслуговування!
               </p>
             </div>
-            <img src="images/baker-man.png" alt="Чоловік пекар посміхається" />
+            <img
+              class="traditions-section__img"
+              src="images/baker-man.png"
+              alt="Чоловік пекар посміхається"
+            />
           </div>
         </div>
       </section>
-      <section class="section" id="chefs-section">
+      <section class="chefs-section section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title centered">
+          <h2 class="chefs-section__title section__title centered">
             Наші найкращі <br />
-            <span class="accent">шеф - кухарі</span>
+            <span class="text-brand-dark">шеф - кухарі</span>
           </h2>
           <ul class="chefs-list">
             <li class="chefs-item">
@@ -127,58 +159,115 @@
       </section>
       <section class="section" id="formats-section">
         <div class="container">
-          <h2 class="formats-title section-title centered">Формати</h2>
-          <div class="formats-container">
-            <button class="carousel-button" type="button">
+          <h2 class="formats-title section__title centered">Формати</h2>
+          <div class="formats-slider">
+            <button
+              class="formats-section__button carousel-button prev"
+              type="button"
+            >
               <svg class="carousel-icon" width="16" height="16">
                 <use href="/images/icons.svg#icon-arrow"></use>
               </svg>
             </button>
-            <ul class="formats-list">
-              <li class="formats-item">
-                <article class="format-card walrus-card">
-                  <h3 class="format-title" lang="en">Walrus</h3>
-                  <div class="format-text walrus-card">
-                    <p>Площа: до 120 м2</p>
-                    <p>Меню: розширене меню</p>
-                    <p>
-                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                      офіціанти-різнороби
-                    </p>
-                    <p>Посадкові місця: є</p>
-                  </div>
-                </article>
-              </li>
-              <li class="formats-item">
-                <article class="format-card horseshoe-card">
-                  <h3 class="format-title" lang="en">Horseshoe</h3>
-                  <div class="format-text">
-                    <p>Площа: до 25 м2</p>
-                    <p>Меню: найпопулярніші позиції меню</p>
-                    <p>
-                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                      офіціанти-різнороби
-                    </p>
-                    <p>Посадкові місця: відсутні</p>
-                  </div>
-                </article>
-              </li>
-              <li class="formats-item">
-                <article class="format-card handlebar-card">
-                  <h3 class="format-title" lang="en">Handlebar</h3>
-                  <div class="format-text">
-                    <p>Площа: до 15 м2</p>
-                    <p>Меню: найпопулярніші позиції меню</p>
-                    <p>
-                      Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                      офіціанти-різнороби
-                    </p>
-                    <p>Посадкові місця: відсутні</p>
-                  </div>
-                </article>
-              </li>
-            </ul>
-            <button class="carousel-button next" type="button">
+            <div class="formats-container swiper-container">
+              <ul class="formats-list swiper-wrapper">
+                <li class="swiper-slide formats-item">
+                  <article class="format-card walrus-card">
+                    <h3 class="format-title" lang="en">Walrus</h3>
+                    <div class="format-text">
+                      <p>Площа: до 120 м2</p>
+                      <p>Меню: розширене меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: є</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide formats-item">
+                  <article class="format-card horseshoe-card">
+                    <h3 class="format-title" lang="en">Horseshoe</h3>
+                    <div class="format-text">
+                      <p>Площа: до 25 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide formats-item">
+                  <article class="format-card handlebar-card">
+                    <h3 class="format-title" lang="en">Handlebar</h3>
+                    <div class="format-text">
+                      <p>Площа: до 15 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide formats-item">
+                  <article class="format-card walrus-card">
+                    <h3 class="format-title" lang="en">Walrus</h3>
+                    <div class="format-text">
+                      <p>Площа: до 120 м2</p>
+                      <p>Меню: розширене меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: є</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide formats-item">
+                  <article class="format-card horseshoe-card">
+                    <h3 class="format-title" lang="en">Horseshoe</h3>
+                    <div class="format-text">
+                      <p>Площа: до 25 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+                <li class="swiper-slide formats-item">
+                  <article class="format-card handlebar-card">
+                    <h3 class="format-title" lang="en">Handlebar</h3>
+                    <div class="format-text">
+                      <p>Площа: до 15 м2</p>
+                      <p>Меню: найпопулярніші позиції меню</p>
+                      <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                        офіціанти-різнороби
+                      </p>
+                      <p>Посадкові місця: відсутні</p>
+                    </div>
+                  </article>
+                </li>
+              </ul>
+              <div class="pagination">
+                <span class="pagination__button"></span>
+                <span class="pagination__button"></span>
+                <span class="pagination__button"></span>
+                <span class="pagination__button"></span>
+              </div>
+            </div>
+
+            <button
+              class="formats-section__button carousel-button next"
+              type="button"
+            >
               <svg class="carousel-icon" width="16" height="16">
                 <use href="/images/icons.svg#icon-arrow"></use>
               </svg>
@@ -190,12 +279,14 @@
         <div class="container">
           <div class="contact-conteiner">
             <div class="contact-form">
-              <h2 class="contact-title section-title">
+              <h2 class="contact-title section__title">
                 Приєднуйся до мережі пекарень
               </h2>
-              <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+              <p class="text-brand-dark">
+                Заповни форму, щоб ми звʼязались з тобою!
+              </p>
               <form name="contact-call-form" autocomplete="off">
-                <div class="form-field">
+                <div class="contact-call__form-field">
                   <label class="form-label visually-hidden" for="user-name">
                     Ім'я
                   </label>
@@ -209,7 +300,7 @@
                   />
                 </div>
 
-                <div class="form-field">
+                <div class="contact-call__form-field">
                   <label class="form-label visually-hidden" for="user-tel">
                     Телефон
                   </label>
@@ -224,7 +315,7 @@
                   />
                 </div>
 
-                <div class="form-field">
+                <div class="contact-call__form-field">
                   <label class="form-label visually-hidden" for="user-mail">
                     Електрона пошта
                   </label>
@@ -238,7 +329,7 @@
                   />
                 </div>
 
-                <button class="button button-form" type="submit">
+                <button class="button contact-call__button-form" type="submit">
                   Замовити дзвінок
                 </button>
                 <p class="form-terms">
@@ -252,8 +343,6 @@
             <iframe
               class="contact-map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1634470361623!2d30.4886983768508!3d50.45668098691485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1763838583906!5m2!1sru!2sua"
-              width="603"
-              height="595"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
@@ -279,41 +368,42 @@
             </ul>
           </nav>
           <address class="footer-adress">
-            <ul class="footer-info">
-              <li>
-                <a class="address-link" href="tel:+380960000007"
-                  >+ 38 (096) 000 00 07</a
-                >
-              </li>
-              <li>
-                <a class="address-link" href="mailto:shopbakery@gmail.com"
-                  >shopbakery@gmail.com</a
-                >
-              </li>
-              <li>
-                <a
-                  class="address-link"
-                  href="https://maps.app.goo.gl/MMDcSP1ApBqdKCD57"
-                  target="_blank"
-                >
-                  Україна, м. Київ, вул. Січових Стрільців 54</a
-                >
-              </li>
-              <li>
+            <div class="footer-adress-contacts">
+              <ul class="footer-info">
+                <li>
+                  <a class="address-link" href="tel:+380960000007"
+                    >+ 38 (096) 000 00 07</a
+                  >
+                </li>
+                <li>
+                  <a class="address-link" href="mailto:shopbakery@gmail.com"
+                    >shopbakery@gmail.com</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="address-link"
+                    href="https://maps.app.goo.gl/MMDcSP1ApBqdKCD57"
+                    target="_blank"
+                  >
+                    Україна, м. Київ, вул. Січових Стрільців 54</a
+                  >
+                </li>
+              </ul>
+              <div>
                 <a href="#">
                   <svg class="address-social" width="32" height="32">
                     <use href="/images/icons.svg#icon-facebook_logo"></use>
                   </svg>
                 </a>
-              </li>
-              <li>
                 <a href="#">
                   <svg class="address-social" width="32" height="32">
                     <use href="/images/icons.svg#icon-instagram_logo"></use>
                   </svg>
                 </a>
-              </li>
-            </ul>
+              </div>
+            </div>
+
             <div class="adress-info">
               <a class="address-link" href="#" target="_blank"
                 >Політика конфіденційності</a
@@ -328,10 +418,12 @@
     <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
-        <h2 class="section-title centered">Замовити дзвінок</h2>
-        <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+        <h2>Замовити дзвінок</h2>
+        <p class="text-brand-dark">
+          Залишіть заявку та наш спеціаліст зв'яжеться з Вами!
+        </p>
         <form name="order-call-form" autocomplete="off">
-          <div class="form-field">
+          <div class="modal__form-field">
             <label class="form-label visually-hidden" for="user-name">
               Ім'я
             </label>
@@ -345,7 +437,7 @@
             />
           </div>
 
-          <div class="form-field">
+          <div class="modal__form-field">
             <label class="form-label visually-hidden" for="user-tel">
               Телефон
             </label>
@@ -359,7 +451,7 @@
             />
           </div>
 
-          <div class="form-field">
+          <div class="modal__form-field">
             <label class="form-label visually-hidden" for="user-mail">
               Електрона пошта
             </label>
@@ -383,6 +475,10 @@
         </form>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+    <script src="./js/formats-slider.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 
     <script src="./js/modal.js"></script>
   </body>
