--- a/index.html
+++ b/index.html
@@ -393,12 +393,12 @@
               <div>
                 <a href="#">
                   <svg class="address-social" width="32" height="32">
-                    <use href="/images/icons.svg#icon-facebook_logo"></use>
+                    <use href="./images/icons.svg#icon-facebook_logo"></use>
                   </svg>
                 </a>
                 <a href="#">
                   <svg class="address-social" width="32" height="32">
-                    <use href="/images/icons.svg#icon-instagram_logo"></use>
+                    <use href="./images/icons.svg#icon-instagram_logo"></use>
                   </svg>
                 </a>
               </div>
